testdata/baselines/reference/submodule/compiler/declarationEmitInvalidReferenceAllowJs.errors.txt
declarationEmitInvalidReferenceAllowJs.ts(1,22): error TS6053: File 'invalid' not found.


==== declarationEmitInvalidReferenceAllowJs.ts (1 errors) ====
    /// <reference path="invalid" />
                         ~~~~~~~
!!! error TS6053: File 'invalid' not found.
    var x = 0; 
    